[package]
name = "JVMDumper"
version = "0.1.0"
authors = ["Slimig <slimig@protonmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.6", features = ["libloaderapi"] }
wio = "0.2.2"
jni = "0.18.0"
detour = "0.8.0"
zip = "0.5"
walkdir = "2.3.1"

[lib]
name = "jvmdumper"
# defines a DLL to be exported. a "cdylib" would also work just fine, and is in some cases necessary, but wouldn't necessarily allow you to use all the features in the stdlib
crate-type = ["dylib"]
